--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.10.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.522.0",
