--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.522.0",
     "next": "^15.3.4",
+    "next-sitemap": "^4.2.3",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-lottie": "^1.2.10",
     "react-redux": "^9.2.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
-    "recharts": "^3.0.0"
+    "recharts": "^3.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
