--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-lottie": "^1.2.10",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
